--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -10,6 +10,7 @@ services:
       - cloud-db
     environment:
       - NODE_ENV=production
+      - DATABASE_URL=${DATABASE_URL}
     networks:
       - proxy
 
@@ -20,6 +21,10 @@ services:
       - '5432'
     volumes:
       - cloud-db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - proxy      
 
