--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "latest",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "nestjs-prisma": "^0.25.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
